--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ nav ul, nav li {
   display: contents;
 }
 
-<a> class="current" 
-	flex: 1
-</a> 
+.a{
+	class="current";
+	flex: 1;
+	text-decoration:none;
+	color: inherit;
+	text-align: center;
+	padding: 0.5em;
+}
