--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   --color-accent: oklch(72.736% 0.05815 260.231);
   accent-color: var(--color-accent);
+  color-scheme: light dark;
 }
 body {
   /* Set line height to 1.5 times the font size
@@ -10,14 +11,17 @@ body {
   max-width: 100ch;
   margin-inline: max(1em, (100% - 100ch) / 2);
   padding: 0.5;
+  position:relative;
 }
 
 
 nav {
   display: flex;
-  border-bottom: 1px solid oklch(80% 3% 200);
+  --border-color: oklch(50% 10% 200 / 40%);
+  border-bottom-color: var(--border-color);
+  border-bottom: 2px solid var(--border-color);
   margin-bottom: 1em;
-}
+  }
 
 nav ul, nav li {
   display: contents;
@@ -32,13 +36,12 @@ nav a{
 }
 
 nav a.current {
-  border-bottom: 0.4em solid oklch(80% 3% 200);
-  padding-bottom: 0.1em;
+  border-bottom: 0.4em solid var(--border-color);
 }
 
 nav a:hover {
   border-bottom: 0.4em solid var(--color-accent);
-  background-color: oklch(from var(--color-accent) 95% 5% h);
+  background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
 
 form {
@@ -110,6 +113,6 @@ h6 {
 }
 
 .p {
-  font_size: 200%;
+  font-size: 200%;
   font: inherit
 }
