--- a/style.css
+++ b/style.css
@@ -152,3 +152,93 @@ h6 {
 .profile-stats dd {
   margin: 0;
 }
+
+.year-font {
+  font-family: 'Calibri', serif;
+  font-size: 16px;
+  color: rgb(27, 27, 64);
+  font-weight: bold;
+}
+
+#projects-pie-plot {
+  max-width: 20em;
+  margin-block: 2em;
+
+  overflow: visible;
+}
+
+.legend {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(9em, 1fr));
+  list-style: none;
+  padding: 1em;
+  margin: 1em 0;
+  gap: 0.5em;
+
+  border: 2px solid oklch(50% 10% 200);
+  border-radius: 8px;     /* optional: rounded corners */
+  background-color: oklch(95% 5% 250 / 10%);
+}
+
+.legend li {
+  display: flex;
+  grid-template-columns: repeat(auto-fill, minmax(9em, 1fr));
+  align-items: center;
+  gap: 0.5em;
+}
+
+.legend .swatch {
+  width: 1em;
+  height: 1em;
+  aspect-ratio: 1 / 1;
+  display: inline-block;
+  border-radius: 4px; /* or 50% for a circle */
+  background-color: var(--color);
+}
+
+.container {
+  display: flex;
+  align-items: center;    
+  gap: 2em;                
+  flex-wrap: wrap;         
+  justify-content: center; 
+  margin-block: 2em;
+}
+
+.container .legend {
+  flex: 1;                 
+  min-width: 15em;        
+}
+
+.searchBar {
+  display: block;
+  width: 100%;
+  max-width: 600px;
+  margin: 1rem auto 2rem;
+  padding: 0.75rem 1rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+
+&:has(path:hover) {
+  path:not(:hover) {
+    opacity: 0.5;
+  }
+}
+
+path {
+  transition: 300ms;
+}
+
+.selected {
+  --color: oklch(60% 45% 0) !important;
+
+  &:is(path) {
+    fill: var(--color);
+  }
+}
+
+path {
+  cursor: pointer;
+}
